Update script with tmux sessionizer

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -25,7 +25,7 @@ set -g @tokyo-night-tmux_show_battery_widget 0
 set -g @tokyo-night-tmux_show_hostname 0
 
 # fzf integration
-set -g @fzf-goto-session 'C-f'
+set -g @fzf-goto-session 'f'
 set -g @fzf-goto-win-width-preview 80%
 set -g @fzf-goto-win-height-preview 80%
 set -g @fzf-goto-preview-enabled 'true'
@@ -59,6 +59,9 @@ bind -n M-h resize-pane -L 2
 bind -n M-j resize-pane -D 2
 bind -n M-k resize-pane -U 2
 bind -n M-l resize-pane -R 2
+
+# tmux sessionizer in popup
+bind C-f run-shell "tmux popup -b rounded -E -w 80% -h 80% '~/.local/bin/tmux-sessionizer.sh'"
 
 # split pane
 bind v split-window -h
