--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ scripts/.local/bin/*
 !scripts/.local/bin/popup_tmux.sh
 !scripts/.local/bin/popup_tmux_common.sh
 !scripts/.local/bin/tmux-sessionizer.sh
+!scripts/.local/bin/waybar.sh
