--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -21,8 +21,8 @@ exec-once = swww-daemon &
 exec-once = $HOME/.local/bin/waybar.sh &
 exec-once = copyq --start-server &
 exec-once = nm-applet &
-exec-once = swww img $HOME/wallpapers/15.png
-
+exec-once = blueman-applet &
+exec-once = swww img $HOME/wallpapers/23.jpg
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -49,7 +49,7 @@ general {
 decoration {
     rounding = 0
     active_opacity = 1.0
-    inactive_opacity = 0.8
+    inactive_opacity = 0.9
 
     shadow {
         enabled = false
@@ -125,13 +125,12 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 bind = $mainMod, X, exec, [float;tile] wezterm start --always-new-process
 bind = $mainMod, Q, killactive,
-bind = $mainMod SHIFT, Q, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, B, exec, $browser
-bindr = $mainMod, SUPER_L, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = , PrintScreen, exec, hyprshot -m region
+
+bind = , F11, fullscreen
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
@@ -183,6 +182,7 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 
 # Session Management
 bind = ALT, L, exec, hyprlock
+bind = $mainMod SHIFT, Q, exec, $HOME/.local/bin/powermenu.sh
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
@@ -192,7 +192,6 @@ windowrule = suppressevent maximize, class:.*
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 windowrule = float, class:com.github.hluk.copyq
 windowrule = float, class:xdg-desktop-portal-gtk
-
 
 xwayland {
   force_zero_scaling = true
