--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -19,7 +19,7 @@ $browser = firefox
 
 exec-once = swww-daemon &
 exec-once = $HOME/.local/bin/waybar.sh &
-exec-once = copyq --start-server &
+exec-once = wl-paste --watch cliphist store &
 exec-once = nm-applet &
 exec-once = blueman-applet &
 exec-once = swww img $HOME/wallpapers/23.jpg
@@ -70,21 +70,21 @@ animations {
     bezier = quick,0.15,0,0.1,1
 
     animation = global, 1, 10, default
-    animation = border, 1, 5.39, easeOutQuint
-    animation = windows, 1, 4.79, easeOutQuint
-    animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
-    animation = windowsOut, 1, 1.49, linear, popin 87%
-    animation = fadeIn, 1, 1.73, almostLinear
-    animation = fadeOut, 1, 1.46, almostLinear
-    animation = fade, 1, 3.03, quick
-    animation = layers, 1, 3.81, easeOutQuint
+    animation = border, 1, 5, easeOutQuint
+    animation = windows, 1, 4, easeOutQuint, slide
+    animation = windowsIn, 1, 4, easeOutQuint, slide
+    animation = windowsOut, 1, 4, easeOutQuint, slide
+    animation = fadeIn, 1, 4, linear
+    animation = fadeOut, 1, 4, linear
+    animation = fade, 1, 4, quick
+    animation = layers, 1, 3.81, easeOutQuint, fade
     animation = layersIn, 1, 4, easeOutQuint, fade
     animation = layersOut, 1, 1.5, linear, fade
-    animation = fadeLayersIn, 1, 1.79, almostLinear
-    animation = fadeLayersOut, 1, 1.39, almostLinear
-    animation = workspaces, 1, 2, almostLinear, slide
-    animation = workspacesIn, 1, 2, almostLinear, slide
-    animation = workspacesOut, 1, 2, almostLinear, slide
+    animation = fadeLayersIn, 1, 1.79, linear
+    animation = fadeLayersOut, 1, 1.39, linear
+    animation = workspaces, 1, 2, linear, slide
+    animation = workspacesIn, 1, 2, linear, slide
+    animation = workspacesOut, 1, 2, linear, slide
 }
 
 dwindle {
@@ -128,17 +128,29 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, B, exec, $browser
-bind = , PrintScreen, exec, hyprshot -m region
+bind = , PRINT, exec, hyprshot-gui
+bind = $mainMod SHIFT, V, exec, rofi -show clipboard -show-icons
 
+# Layout
 bind = , F11, fullscreen
+bind = $mainMod, T, togglegroup
+bind = SUPER+ALT, J, changegroupactive, f
+bind = SUPER+ALT, K, changegroupactive, b
+bind = $mainMod SHIFT, F, togglefloating,
 
-# Move focus with mainMod + arrow keys
+# Move focus with mainMod + hjkl keys
 bind = $mainMod, H, movefocus, l
 bind = $mainMod, L, movefocus, r
 bind = $mainMod, K, movefocus, u
 bind = $mainMod, J, movefocus, d
 
-# Switch workspaces with mainMod + [0-9]
+# Move window with mainMod + SHIFT + hjkl keys
+bind = $mainMod SHIFT, H, movewindoworgroup, l
+bind = $mainMod SHIFT, L, movewindoworgroup, r
+bind = $mainMod SHIFT, K, movewindoworgroup, u
+bind = $mainMod SHIFT, J, movewindoworgroup, d
+
+# Switch workspaces with mainMod + [0-6]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
@@ -190,8 +202,9 @@ bind = $mainMod SHIFT, Q, exec, $HOME/.local/bin/powermenu.sh
 
 windowrule = suppressevent maximize, class:.*
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
-windowrule = float, class:com.github.hluk.copyq
 windowrule = float, class:xdg-desktop-portal-gtk
+windowrule = float, class:firefox, title:.*Extension.*,floating:1
+windowrule = tile, class:CiscoCollabHost
 
 xwayland {
   force_zero_scaling = true
