--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -22,6 +22,7 @@ exec-once = $HOME/.local/bin/waybar.sh &
 exec-once = wl-paste --watch cliphist store &
 exec-once = nm-applet &
 exec-once = blueman-applet &
+exec-once = dunst &
 exec-once = swww img $HOME/wallpapers/23.jpg
 
 #############################
@@ -191,6 +192,9 @@ bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
+
+# Additional Function Keys
+bind = , XF86TouchpadToggle, exec, ~/.local/bin/toggle-touchpad.sh
 
 # Session Management
 bind = ALT, L, exec, hyprlock
