--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -23,6 +23,7 @@ exec-once = wl-paste --watch cliphist store &
 exec-once = nm-applet &
 exec-once = blueman-applet &
 exec-once = dunst &
+exec-once = udiskie &
 exec-once = swww img $HOME/wallpapers/23.jpg
 
 #############################
@@ -166,6 +167,10 @@ bind = $mainMod SHIFT, 3, movetoworkspace, 3
 bind = $mainMod SHIFT, 4, movetoworkspace, 4
 bind = $mainMod SHIFT, 5, movetoworkspace, 5
 bind = $mainMod SHIFT, 6, movetoworkspace, 6
+
+# Move workspace to monitor
+bind = $mainMod CTRL, H, movecurrentworkspacetomonitor, l
+bind = $mainMod CTRL, L, movecurrentworkspacetomonitor, r
 
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
