--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -24,6 +24,7 @@ exec-once = nm-applet &
 exec-once = blueman-applet &
 exec-once = dunst &
 exec-once = udiskie &
+exec-once = ~/.local/bin/hyprland-sock-listen.sh &
 exec-once = swww img $HOME/wallpapers/23.jpg
 
 #############################
@@ -210,9 +211,7 @@ bind = $mainMod SHIFT, Q, exec, $HOME/.local/bin/powermenu.sh
 ##############################
 
 windowrule = suppressevent maximize, class:.*
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 windowrule = float, class:xdg-desktop-portal-gtk
-windowrule = float, class:firefox, title:.*Extension.*,floating:1
 windowrule = tile, class:CiscoCollabHost
 
 xwayland {
