--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -9,7 +9,7 @@ monitor=eDP-1,1920x1080,0x0,1.2
 ###################
 
 $terminal = wezterm
-$fileManager = thunar
+$fileManager = nautilus
 $menu = pkill rofi || rofi -show drun
 $browser = firefox
 
@@ -19,13 +19,15 @@ $browser = firefox
 
 exec-once = swww-daemon &
 exec-once = $HOME/.local/bin/waybar.sh &
-exec-once = wl-paste --watch cliphist store &
+exec-once = wl-paste --type text --watch cliphist store &
+exec-once = wl-paste --type image --watch cliphist store &
 exec-once = nm-applet &
 exec-once = blueman-applet &
 exec-once = dunst &
 exec-once = udiskie &
 exec-once = ~/.local/bin/hyprland-sock-listen.sh &
-exec-once = swww img $HOME/wallpapers/23.jpg
+exec-once = swww img $HOME/wallpapers/23.jpg &
+exec-once = hyprctl setcursor Adwaita 24 &
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -33,6 +35,7 @@ exec-once = swww img $HOME/wallpapers/23.jpg
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+env = GTK_THEME,Tokyonight-Dark-Compact
 
 #####################
 ### LOOK AND FEEL ###
