--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -1,4 +1,4 @@
-$font = 'FiraCodeMono Nerd Font Mono'
+$font = 'FiraMono Nerd Font Mono'
 
 general {
     hide_cursor = false
@@ -19,11 +19,11 @@ background {
 }
 
 input-field {
-    size = 20%, 5%
-    outline_thickness = 1
-    inner_color = rgba(0, 0, 0, 0.0) # no fill
+    size = 400px, 70px
+    outer_size = 1
+    inner_color = rgb(1a1b26)
 
-    outer_color = rgb(7aa2f7)
+    outer_color = rgba(7aa2f7ff)
     check_color = rgb(e0af68)
     fail_color = rgb(f7768e)
 
@@ -33,7 +33,7 @@ input-field {
 
     font_family = $font
     placeholder_text = Input password...
-    fail_text = $PAMFAIL
+    fail_text = Wrong Password
 
     dots_spacing = 0.3
 
