--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -2,7 +2,7 @@
 ### MONITORS ###
 ################
 
-monitor=eDP-1,1920x1080,0x0,1.2
+monitor=eDP-1,1920x1080@144,0x0,1.2
 
 ###################
 ### MY PROGRAMS ###
@@ -26,6 +26,7 @@ exec-once = blueman-applet &
 exec-once = dunst &
 exec-once = udiskie &
 exec-once = ~/.local/bin/hyprland-sock-listen.sh &
+exec-once = lxsession &
 exec-once = swww img $HOME/wallpapers/23.jpg &
 exec-once = hyprctl setcursor Adwaita 24 &
 
