Update hyprland config

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -12,6 +12,7 @@ $terminal = wezterm
 $fileManager = nautilus
 $menu = pkill rofi || rofi -show drun
 $browser = firefox
+$hibernateCmd = $HOME/.local/bin/hibernate.sh
 
 #################
 ### AUTOSTART ###
@@ -28,14 +29,14 @@ exec-once = udiskie &
 exec-once = ~/.local/bin/hyprland-sock-listen.sh &
 exec-once = lxsession &
 exec-once = swww img $HOME/wallpapers/23.jpg &
-exec-once = hyprctl setcursor Adwaita 24 &
+exec-once = hyprctl setcursor Adwaita 23 &
 
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
 
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
+env = XCURSOR_SIZE,23
+env = HYPRCURSOR_SIZE,23
 env = GTK_THEME,Tokyonight-Dark-Compact
 
 #####################
@@ -56,7 +57,7 @@ general {
 decoration {
     rounding = 0
     active_opacity = 1.0
-    inactive_opacity = 0.9
+    inactive_opacity = 1.0
 
     shadow {
         enabled = false
@@ -117,6 +118,7 @@ input {
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
     touchpad {
         natural_scroll = true
+        scroll_factor = 0.69
     }
 }
 
@@ -135,8 +137,13 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, B, exec, $browser
+bind = $mainMod SHIFT, B, exec, $browser --private-window
 bind = , PRINT, exec, hyprshot-gui
+bind = , PrintScreen, exec, hyprshot-gui
 bind = $mainMod SHIFT, V, exec, rofi -show clipboard -show-icons
+bind = $mainMod, Tab, exec, rofi -show window
+bind = ALT, Tab, exec, rofi -show window
+bind = , XF86Launch1, exec, rog-control-center
 
 # Layout
 bind = , F11, fullscreen
@@ -190,12 +197,12 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Laptop multimedia keys for volume and LCD brightness
-binde = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
-binde = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-binde = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-binde = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-binde = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
-binde = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
+binde = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
+binde = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+binde = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+binde = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+binde = , XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
+binde = , XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
@@ -205,6 +212,7 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 
 # Additional Function Keys
 bind = , XF86TouchpadToggle, exec, ~/.local/bin/toggle-touchpad.sh
+bindl = , XF86Sleep, exec, $hibernateCmd
 
 # Session Management
 bind = ALT, L, exec, hyprlock
@@ -217,6 +225,7 @@ bind = $mainMod SHIFT, Q, exec, $HOME/.local/bin/powermenu.sh
 windowrule = suppressevent maximize, class:.*
 windowrule = float, class:xdg-desktop-portal-gtk
 windowrule = tile, class:CiscoCollabHost
+windowrule = float, class:org.gnome.Calculator
 
 xwayland {
   force_zero_scaling = true
