--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -44,9 +44,9 @@ set-option -g renumber-windows on
 
 # vim keybindings
 bind -T copy-mode-vi v send -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "wl-copy"
 bind P paste-buffer
-bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "wl-copy"
 bind-key ! break-pane -d -n _hidden_pane
 bind-key @ join-pane -s $.0
 
@@ -61,7 +61,7 @@ bind -n M-k resize-pane -U 2
 bind -n M-l resize-pane -R 2
 
 # tmux sessionizer in popup
-bind C-f run-shell "tmux popup -b rounded -E -w 80% -h 80% '~/.local/bin/tmux-sessionizer.sh'"
+bind C-f run-shell "tmux popup -E -w 80% -h 80% '~/.local/bin/tmux-sessionizer.sh'"
 
 # split pane
 bind v split-window -h
