Update hyprland config

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -19,6 +19,7 @@ $hibernateCmd = $HOME/.local/bin/hibernate.sh
 #################
 
 exec-once = swww-daemon &
+exec-once = hypridle &j
 exec-once = $HOME/.local/bin/waybar.sh &
 exec-once = wl-paste --type text --watch cliphist store &
 exec-once = wl-paste --type image --watch cliphist store &
@@ -48,10 +49,24 @@ general {
     gaps_out = 5
     border_size = 1
     col.active_border = rgb(7aa2f7)
-    col.inactive_border = rgba(00000000)
+    col.inactive_border = rgb(3d59a1)
     resize_on_border = true
     allow_tearing = false
     layout = dwindle
+}
+
+group {
+    col.border_active = rgb(7aa2f7)
+    col.border_inactive = rgb(3d59a1)
+    groupbar {
+        font_family = [[FiraMono Nerd Font Mono]]
+        font_size = 8
+        height = 10
+        indicator_height = 1
+        rounding = 0
+        col.active = rgb(7aa2f7)
+        col.inactive = rgb(3d59a1)
+    }
 }
 
 decoration {
@@ -102,6 +117,11 @@ dwindle {
 
 master {
     new_status = master
+}
+
+misc {
+    disable_hyprland_logo = true
+    disable_splash_rendering = true
 }
 
 #############
