--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -25,8 +25,10 @@
         "format-icons": {
             "visible": "",
             "active": "",
-            "urgent": ""
+            "urgent": "",
         },
+        "all-outputs": true,
+        "persistent-workspaces": {"*": 6}
     },
     "idle_inhibitor": {
         "format": "{icon}",
