--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -94,20 +94,23 @@ animations {
 
     animation = global, 1, 10, default
     animation = border, 1, 5, easeOutQuint
-    animation = windows, 1, 4, easeOutQuint, slide
-    animation = windowsIn, 1, 4, easeOutQuint, slide
-    animation = windowsOut, 1, 4, easeOutQuint, slide
-    animation = fadeIn, 1, 4, linear
-    animation = fadeOut, 1, 4, linear
-    animation = fade, 1, 4, quick
-    animation = layers, 1, 3.81, easeOutQuint, fade
+    animation = windows, 1, 2, easeOutQuint, slide
+    animation = windowsIn, 1, 2, easeOutQuint, slide
+    animation = windowsOut, 1, 2, easeOutQuint, slide
+    animation = fadeIn, 1, 2, easeInOutCubic
+    animation = fadeOut, 1, 2, easeInOutCubic 
+    animation = fade, 1, 2, quick
+    animation = layers, 1, 4, easeOutQuint, fade
     animation = layersIn, 1, 4, easeOutQuint, fade
-    animation = layersOut, 1, 1.5, linear, fade
+    animation = layersOut, 1, 4, linear, fade
     animation = fadeLayersIn, 1, 1.79, linear
     animation = fadeLayersOut, 1, 1.39, linear
     animation = workspaces, 1, 2, linear, slide
     animation = workspacesIn, 1, 2, linear, slide
     animation = workspacesOut, 1, 2, linear, slide
+    animation = specialWorkspace, 1, 1, linear, fade
+    animation = specialWorkspaceIn, 1, 1, linear, fade
+    animation = specialWorkspaceOut, 1, 1, linear, fade
 }
 
 dwindle {
@@ -246,6 +249,7 @@ windowrule = suppressevent maximize, class:.*
 windowrule = float, class:xdg-desktop-portal-gtk
 windowrule = tile, class:CiscoCollabHost
 windowrule = float, class:org.gnome.Calculator
+windowrule = float, class:steam, title=.*Settings.*
 
 xwayland {
   force_zero_scaling = true
