--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -13,31 +13,44 @@ animations {
 }
 
 background {
-    path = $HOME/wallpapers/23.jpg
-    blur_passes = 2
-    blur_size = 3
+    path = 
+    color = rgb(16161e)
+    blur_passes = 0
+    blur_size = 0
 }
 
 input-field {
-    size = 400px, 70px
-    outer_size = 1
-    inner_color = rgb(1a1b26)
+    size = 400px, 50px
+    outline_thickness = 0 
+    outer_size = 0
 
-    outer_color = rgba(7aa2f7ff)
+    outer_color = rgb(7aa2f7)
+    inner_color = rgb(1a1b26)
     check_color = rgb(e0af68)
     fail_color = rgb(f7768e)
-
     font_color = rgb(c0caf5)
+
     fade_on_empty = false
     rounding = 0
 
     font_family = $font
-    placeholder_text = Input password...
-    fail_text = Wrong Password
+    placeholder_text = Locked as $USER
+    fail_text = Wrong password
 
     dots_spacing = 0.3
 
     position = 0, 0
     halign = center
     valign = center
+}
+
+label {
+    text = cmd[update:1000] echo "$(date '+%H:%M')"
+    font_family = $font
+    font_size = 80
+    color = rgb(c0caf5)
+
+    position = -80, -50
+    halign = right
+    valign = top
 }
