--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -224,8 +224,8 @@ binde = , XF86AudioRaiseVolume, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ 0 && w
 binde = , XF86AudioLowerVolume, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ 0 && wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 binde = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 binde = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-binde = , XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
-binde = , XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
+binde = , XF86MonBrightnessUp, exec, brightnessctl -n0 set 5%+
+binde = , XF86MonBrightnessDown, exec, brightnessctl -n0 set 5%-
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
@@ -247,7 +247,7 @@ bind = $mainMod SHIFT, Q, exec, $HOME/.local/bin/powermenu.sh
 
 windowrule = suppressevent maximize, class:.*
 windowrule = float, class:xdg-desktop-portal-gtk
-windowrule = tile, class:CiscoCollabHost
+windowrule = tile, class:^CiscoCollabHost$
 windowrule = float, class:org.gnome.Calculator
 windowrule = float, class:steam, title=.*Settings.*
 
