--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -12,6 +12,7 @@ $terminal = wezterm
 $fileManager = nautilus
 $menu = pkill rofi || rofi -show drun
 $browser = firefox
+$altBrowser = brave-browser
 $hibernateCmd = $HOME/.local/bin/hibernate.sh
 
 #################
@@ -161,6 +162,8 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, B, exec, $browser
 bind = $mainMod SHIFT, B, exec, $browser --private-window
+bind = $mainMod ALT, B, exec, $altBrowser
+bind = $mainMod ALT SHIFT, B, exec, $altBrowser --incognito
 bind = , PRINT, exec, hyprshot-gui
 bind = , PrintScreen, exec, hyprshot-gui
 bind = $mainMod SHIFT, V, exec, rofi -show clipboard -show-icons
@@ -248,8 +251,10 @@ bind = $mainMod SHIFT, Q, exec, $HOME/.local/bin/powermenu.sh
 windowrule = suppressevent maximize, class:.*
 windowrule = float, class:xdg-desktop-portal-gtk
 windowrule = tile, class:^CiscoCollabHost$
+windowrule = workspace 1, class:^CiscoCollabHost$
 windowrule = float, class:org.gnome.Calculator
 windowrule = float, class:steam, title=.*Settings.*
+windowrule = fullscreen, class:steam, title=.*Settings.*
 
 xwayland {
   force_zero_scaling = true
