--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -14,7 +14,7 @@ animations {
 
 background {
     path = 
-    color = rgb(16161e)
+    color = rgb(0c0e14)
     blur_passes = 0
     blur_size = 0
 }
