--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -30,7 +30,7 @@ exec-once = dunst &
 exec-once = udiskie &
 exec-once = ~/.local/bin/hyprland-sock-listen.sh &
 exec-once = lxsession &
-exec-once = swww img $HOME/wallpapers/23.jpg &
+exec-once = swww img $HOME/wallpapers/24.png &
 exec-once = hyprctl setcursor Adwaita 23 &
 
 #############################
