Update hyprlock config

--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -13,10 +13,10 @@ animations {
 }
 
 background {
-    path = 
+    path = $HOME/wallpapers/24.png
     color = rgb(0c0e14)
-    blur_passes = 0
-    blur_size = 0
+    blur_passes = 3
+    blur_size = 2
 }
 
 input-field {
@@ -25,9 +25,9 @@ input-field {
     outer_size = 0
 
     outer_color = rgb(7aa2f7)
-    inner_color = rgb(1a1b26)
-    check_color = rgb(e0af68)
-    fail_color = rgb(f7768e)
+    inner_color = rgba(7aa2f711)
+    check_color = rgba(e0af6833)
+    fail_color = rgba(f7768e66)
     font_color = rgb(c0caf5)
 
     fade_on_empty = false
