--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -8,7 +8,7 @@ monitor=eDP-1,1920x1080@144,0x0,1.2
 ### MY PROGRAMS ###
 ###################
 
-$terminal = wezterm
+$terminal = ghostty
 $fileManager = nautilus
 $menu = pkill rofi || rofi -show drun
 $browser = firefox
@@ -156,7 +156,7 @@ gestures {
 
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
-bind = $mainMod, X, exec, [float;tile] wezterm start --always-new-process
+bind = $mainMod, X, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, R, exec, $menu
