Update hyprland config

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -2,7 +2,13 @@
 ### MONITORS ###
 ################
 
-monitor=eDP-1,1920x1080@144,0x0,1.2
+monitorv2 {
+    output = eDP-1
+    mode = 1920x1080@144
+    position = 0x0
+    scale = 1.2
+    transform = 0
+}
 
 ###################
 ### MY PROGRAMS ###
@@ -174,9 +180,13 @@ bind = , XF86Launch1, exec, rog-control-center
 # Layout
 bind = , F11, fullscreen
 bind = $mainMod, T, togglegroup
-bind = SUPER+ALT, J, changegroupactive, f
-bind = SUPER+ALT, K, changegroupactive, b
+bind = SUPER ALT, J, changegroupactive, f
+bind = SUPER ALT, K, changegroupactive, b
 bind = $mainMod SHIFT, F, togglefloating,
+
+# Multi Monitor
+bind = SUPER ALT, H, movecurrentworkspacetomonitor, l
+bind = SUPER ALT, L, movecurrentworkspacetomonitor, r
 
 # Move focus with mainMod + hjkl keys
 bind = $mainMod, H, movefocus, l
