--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -187,6 +187,7 @@ bind = $mainMod SHIFT, F, togglefloating,
 # Multi Monitor
 bind = SUPER ALT, H, movecurrentworkspacetomonitor, l
 bind = SUPER ALT, L, movecurrentworkspacetomonitor, r
+bind = SUPER ALT, S, swapactiveworkspaces, 0 1
 
 # Move focus with mainMod + hjkl keys
 bind = $mainMod, H, movefocus, l
@@ -200,13 +201,17 @@ bind = $mainMod SHIFT, L, movewindoworgroup, r
 bind = $mainMod SHIFT, K, movewindoworgroup, u
 bind = $mainMod SHIFT, J, movewindoworgroup, d
 
-# Switch workspaces with mainMod + [0-6]
+# Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
 bind = $mainMod, 4, workspace, 4
 bind = $mainMod, 5, workspace, 5
 bind = $mainMod, 6, workspace, 6
+bind = $mainMod, 7, workspace, 7
+bind = $mainMod, 8, workspace, 8
+bind = $mainMod, 9, workspace, 9
+bind = $mainMod, 0, workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
@@ -215,6 +220,10 @@ bind = $mainMod SHIFT, 3, movetoworkspace, 3
 bind = $mainMod SHIFT, 4, movetoworkspace, 4
 bind = $mainMod SHIFT, 5, movetoworkspace, 5
 bind = $mainMod SHIFT, 6, movetoworkspace, 6
+bind = $mainMod SHIFT, 7, movetoworkspace, 7
+bind = $mainMod SHIFT, 8, movetoworkspace, 8
+bind = $mainMod SHIFT, 9, movetoworkspace, 9
+bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Move workspace to monitor
 bind = $mainMod CTRL, H, movecurrentworkspacetomonitor, l
@@ -261,7 +270,7 @@ bind = $mainMod SHIFT, Q, exec, $HOME/.local/bin/powermenu.sh
 windowrule = suppressevent maximize, class:.*
 windowrule = float, class:xdg-desktop-portal-gtk
 windowrule = tile, class:^CiscoCollabHost$
-windowrule = workspace 6, class:^CiscoCollabHost$
+windowrule = workspace 10, class:^CiscoCollabHost$
 windowrule = float, class:org.gnome.Calculator
 windowrule = float, class:steam, title=.*Settings.*
 windowrule = fullscreen, class:steam, title=.*Settings.*
