--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -14,6 +14,9 @@ set -g status "on"
 # popup border color
 set -g popup-border-style "fg=#7AA2F7"
 
+# default terminal
+set -g default-terminal "xterm-ghostty"
+
 # theme
 set -g @tokyo-night-tmux_pane_id_style hsquare
 set -g @tokyo-night-tmux_window_id_style hsquare
