Update dotfiles for multi monitor

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -3,9 +3,18 @@
 ################
 
 monitorv2 {
+    output = HDMI-A-1
+    mode = 2460x1440@144
+    position = 0x0
+    scale = 1
+    transform = 0
+    supports_hdr = 1
+}
+
+monitorv2 {
     output = eDP-1
     mode = 1920x1080@144
-    position = 0x0
+    position = 2560x0
     scale = 1.2
     transform = 0
 }
