--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -276,6 +276,9 @@ bind = $mainMod SHIFT, Q, exec, $HOME/.local/bin/powermenu.sh
 ### WINDOWS AND WORKSPACES ###
 ##############################
 
+workspace = 1, monitor:HDMI-A-1, default:true
+workspace = 10, monitor:eDP-1, default:true
+
 windowrule = suppressevent maximize, class:.*
 windowrule = float, class:xdg-desktop-portal-gtk
 windowrule = tile, class:^CiscoCollabHost$
