--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -44,6 +44,12 @@ set-option -g prefix C-b
 # automatically renumber windows
 set-option -g renumber-windows on
 
+# split navigation
+bind C-h select-pane -L
+bind C-l select-pane -R
+bind C-j select-pane -U
+bind C-k select-pane -D
+
 # vim keybindings
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "wl-copy"
