--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -3,12 +3,11 @@
 ################
 
 monitorv2 {
-    output = HDMI-A-1
-    mode = 2460x1440@144
+    output = DP-1
+    mode = 2560x1440@180
     position = 0x0
     scale = 1
     transform = 0
-    supports_hdr = 1
 }
 
 monitorv2 {
@@ -276,9 +275,6 @@ bind = $mainMod SHIFT, Q, exec, $HOME/.local/bin/powermenu.sh
 ### WINDOWS AND WORKSPACES ###
 ##############################
 
-workspace = 1, monitor:HDMI-A-1, default:true
-workspace = 10, monitor:eDP-1, default:true
-
 windowrule = suppressevent maximize, class:.*
 windowrule = float, class:xdg-desktop-portal-gtk
 windowrule = tile, class:^CiscoCollabHost$
@@ -289,4 +285,8 @@ windowrule = fullscreen, class:steam, title=.*Settings.*
 
 xwayland {
   force_zero_scaling = true
+}
+
+experimental {
+    xx_color_management_v4 = true 
 }
