--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -192,11 +192,6 @@ bind = SUPER ALT, J, changegroupactive, f
 bind = SUPER ALT, K, changegroupactive, b
 bind = $mainMod SHIFT, F, togglefloating,
 
-# Multi Monitor
-bind = SUPER ALT, H, movecurrentworkspacetomonitor, l
-bind = SUPER ALT, L, movecurrentworkspacetomonitor, r
-bind = SUPER ALT, S, swapactiveworkspaces, 0 1
-
 # Move focus with mainMod + hjkl keys
 bind = $mainMod, H, movefocus, l
 bind = $mainMod, L, movefocus, r
@@ -236,6 +231,7 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 # Move workspace to monitor
 bind = $mainMod CTRL, H, movecurrentworkspacetomonitor, l
 bind = $mainMod CTRL, L, movecurrentworkspacetomonitor, r
+bind = $mainMod CTRL, S, swapactiveworkspaces, 0 1
 
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
@@ -248,6 +244,21 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+# Resize submap
+bind = $mainMod CTRL, R, submap, resize
+submap = resize
+
+# Set repeatable binds for resizing the active window.
+binde = , l, resizeactive, 10 0
+binde = , j, resizeactive, 0 10
+binde = , k, resizeactive, 0 -10
+binde = , h, resizeactive, -10 0
+
+# Use `reset` to go back to the global submap
+bind = , escape, submap, reset
+bind = $mainMod CTRL, R, submap, reset
+submap = reset
 
 # Laptop multimedia keys for volume and LCD brightness
 binde = , XF86AudioRaiseVolume, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ 0 && wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
