--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -15,7 +15,7 @@ set -g status "on"
 set -g popup-border-style "fg=#7AA2F7"
 
 # default terminal
-set -g default-terminal "xterm-ghostty"
+set -g default-terminal "xterm-256color"
 
 # theme
 set -g @tokyo-night-tmux_pane_id_style hsquare
