Toggle mute on click of volume widget in waybar

--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -65,6 +65,7 @@
         "states": {
             "normal": 40
         },
+        "on-click": "pactl set-sink-mute @DEFAULT_SINK@ toggle",
         "format": " {volume}% {icon}",
         "format-muted": " {volume}% ░░░░░░",
         "format-icons": ["░░░░░░", "█░░░░░", "██░░░░", "███░░░", "████░░░", "█████░", "██████"]
