--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -54,6 +54,8 @@ exec-once = swww img $HOME/wallpapers/24.png &
 env = XCURSOR_SIZE,23
 env = HYPRCURSOR_SIZE,23
 env = GTK_THEME,Tokyonight-Teal-Dark
+env = __GL_GSYNC_ALLOWED,1
+env = __GL_VRR_ALLOWED,1
 
 #####################
 ### LOOK AND FEEL ###
@@ -140,6 +142,7 @@ master {
 misc {
     disable_hyprland_logo = true
     disable_splash_rendering = true
+    vrr = true
 }
 
 #############
