--- a/oh-my-posh/.config/oh-my-posh/tokyonight.omp.toml
+++ b/oh-my-posh/.config/oh-my-posh/tokyonight.omp.toml
@@ -62,7 +62,7 @@ style = 'plain'
 
   [blocks.segments.properties]
 branch_icon = ' '
-fetch_status = true
+fetch_status = false
 
 [[blocks]]
 type = 'prompt'
