--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -33,7 +33,7 @@ set -g @fzf-goto-win-height-preview 80%
 set -g @fzf-goto-preview-enabled 'true'
 
 # enable CSI u
-set -g extended-keys on
+set -g extended-keys off
 set-option -sa terminal-overrides ",*:Tc"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
