Update hyprland config

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -33,17 +33,18 @@ $hibernateCmd = $HOME/.local/bin/hibernate.sh
 ### AUTOSTART ###
 #################
 
+exec-once = dbus-update-activation-environment --systemd --all
 exec-once = hypridle &j
 exec-once = $HOME/.local/bin/waybar.sh &
 exec-once = wl-paste --type text --watch cliphist store &
 exec-once = wl-paste --type image --watch cliphist store &
 exec-once = nm-applet &
-exec-once = blueman-applet &
 exec-once = dunst &
 exec-once = udiskie &
 exec-once = ~/.local/bin/hyprland-sock-listen.sh &
 exec-once = lxsession &
 exec-once = hyprctl setcursor Adwaita 23 &
+exec-once = blueman-tray &
 exec-once = swww-daemon &
 exec-once = swww img $HOME/wallpapers/24.png &
 
@@ -163,9 +164,7 @@ input {
     }
 }
 
-gestures {
-    workspace_swipe = true
-}
+gesture = 3, horizontal, workspace
 
 ###################
 ### KEYBINDINGS ###
@@ -184,6 +183,7 @@ bind = $mainMod ALT SHIFT, B, exec, $altBrowser --incognito
 bind = , PRINT, exec, hyprshot-gui
 bind = , PrintScreen, exec, hyprshot-gui
 bind = $mainMod SHIFT, V, exec, rofi -show clipboard -show-icons
+bind = $mainMod SHIFT, A, exec, rofi -show volume -show-icons
 bind = $mainMod, Tab, exec, rofi -show window
 bind = ALT, Tab, exec, rofi -show window
 bind = , XF86Launch1, exec, rog-control-center
