--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -26,7 +26,7 @@ $terminal = ghostty
 $fileManager = nautilus
 $menu = pkill rofi || rofi -show drun
 $browser = firefox
-$altBrowser = chromium
+$altBrowser = brave-browser
 $hibernateCmd = $HOME/.local/bin/hibernate.sh
 
 #################
