Update theme to everforest

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -46,7 +46,7 @@ exec-once = lxsession &
 exec-once = hyprctl setcursor Adwaita 23 &
 exec-once = blueman-tray &
 exec-once = swww-daemon &
-exec-once = swww img $HOME/wallpapers/24.png &
+exec-once = swww img $HOME/wallpapers/26.jpg &
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -66,24 +66,24 @@ general {
     gaps_in = 5
     gaps_out = 5
     border_size = 1
-    col.active_border = rgb(7aa2f7)
-    col.inactive_border = rgb(3d59a1)
+    col.active_border = rgb(7fbbb3)
+    col.inactive_border = rgb(7a8478)
     resize_on_border = true
     allow_tearing = false
     layout = dwindle
 }
 
 group {
-    col.border_active = rgb(7aa2f7)
-    col.border_inactive = rgb(3d59a1)
+    col.border_active = rgb(7fbbb3)
+    col.border_inactive = rgb(7a8478)
     groupbar {
         font_family = [[FiraMono Nerd Font Mono]]
         font_size = 8
         height = 10
         indicator_height = 1
         rounding = 0
-        col.active = rgb(7aa2f7)
-        col.inactive = rgb(3d59a1)
+        col.active = rgb(7fbbb3)
+        col.inactive = rgb(7a8478)
     }
 }
 
