--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -13,9 +13,9 @@ animations {
 }
 
 background {
-    path = $HOME/wallpapers/24.png
+    path = $HOME/wallpapers/26.jpg
     color = rgb(0c0e14)
-    blur_passes = 3
+    blur_passes = 2
     blur_size = 2
 }
 
@@ -24,11 +24,11 @@ input-field {
     outline_thickness = 0 
     outer_size = 0
 
-    outer_color = rgb(7aa2f7)
-    inner_color = rgba(7aa2f711)
-    check_color = rgba(e0af6833)
-    fail_color = rgba(f7768e66)
-    font_color = rgb(c0caf5)
+    outer_color = rgb(1E2326)
+    inner_color = rgba(1E232633)
+    check_color = rgba(DBBC7F33)
+    fail_color = rgba(E67E8033)
+    font_color = rgb(D3C6AA)
 
     fade_on_empty = false
     rounding = 0
@@ -48,7 +48,7 @@ label {
     text = cmd[update:1000] echo "$(date '+%H:%M')"
     font_family = $font
     font_size = 80
-    color = rgb(c0caf5)
+    color = rgb(D3C6AA)
 
     position = -80, -50
     halign = right
