--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -2,7 +2,6 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'jimeh/tmuxifier'
-set -g @plugin 'jay-goyal/tokyo-night-tmux'
 set -g @plugin 'vndmp4/tmux-fzf-session-switch'
 
 # status
@@ -18,13 +17,31 @@ set -g popup-border-style "fg=#7AA2F7"
 set -g default-terminal "xterm-256color"
 
 # theme
-set -g @tokyo-night-tmux_pane_id_style hsquare
-set -g @tokyo-night-tmux_window_id_style hsquare
-set -g @tokyo-night-tmux_show_music 0
-set -g @tokyo-night-tmux_transparent 0
-set -g @tokyo-night-tmux_show_path 0
-set -g @tokyo-night-tmux_show_battery_widget 0
-set -g @tokyo-night-tmux_show_hostname 0
+bg="#1E2326"
+bg_light="#272E33"
+fg="#D3C6AA"
+yellow="#DBBC7F"
+darkblue="#3A94C5"
+cyan="#83C092"
+green="#A7C080"
+orange="#E69875"
+violet="#DF69BA"
+magenta="#D699B6"
+blue="#7FBBB3"
+red="#E67E80"
+grey0="#7a8478"
+grey1="#859289"
+
+set -g status-left-length 100
+set -g status-style "fg=${fg},bg=${bg}"
+set -g status-left "#[fg=${blue},bg=${bg},bold] #{?pane_in_mode, , }#S #[fg=${fg},nobold]|"
+set -g window-status-current-format "#[fg=${blue},bg=${bg_light}]  #[underscore]#I:#W#[nounderscore] "
+set -g window-status-format "#[fg=${fg},bg=${bg}]#{?window_last_flag, 󰁯,} #I:#W "
+set -g status-right ""
+set -g message-style "fg=${bg},bg=${blue}"
+set -g mode-style "fg=${bg},bg=${blue}"
+set -g pane-border-style "fg=${grey0}"
+set -g pane-active-border-style "fg=${green}"
 
 # fzf integration
 set -g @fzf-goto-session 'f'
