Remove tokyonight completely

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -54,7 +54,7 @@ exec-once = swww img $HOME/wallpapers/26.jpg &
 
 env = XCURSOR_SIZE,23
 env = HYPRCURSOR_SIZE,23
-env = GTK_THEME,Tokyonight-Teal-Dark
+env = GTK_THEME,Everforest-Dark-Compact
 env = __GL_GSYNC_ALLOWED,1
 env = __GL_VRR_ALLOWED,1
 
