--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -180,8 +180,8 @@ bind = $mainMod, B, exec, $browser
 bind = $mainMod SHIFT, B, exec, $browser --private-window
 bind = $mainMod ALT, B, exec, $altBrowser
 bind = $mainMod ALT SHIFT, B, exec, $altBrowser --incognito
-bind = , PRINT, exec, hyprshot-gui
-bind = , PrintScreen, exec, hyprshot-gui
+bind = , PRINT, exec, rofi -show hyprshot
+bind = , PrintScreen, exec, rofi -show hyprshot
 bind = $mainMod SHIFT, V, exec, rofi -show clipboard -show-icons
 bind = $mainMod SHIFT, A, exec, rofi -show volume -show-icons
 bind = $mainMod, Tab, exec, rofi -show window
@@ -282,7 +282,7 @@ bind = , XF86TouchpadToggle, exec, ~/.local/bin/toggle-touchpad.sh
 bindl = , XF86Sleep, exec, $hibernateCmd
 
 # Session Management
-bind = ALT, L, exec, hyprlock
+bind = ALT SHIFT, L, exec, hyprlock
 bind = $mainMod SHIFT, Q, exec, $HOME/.local/bin/powermenu.sh
 
 ##############################
@@ -293,7 +293,7 @@ windowrule = suppressevent maximize, class:.*
 windowrule = float, class:xdg-desktop-portal-gtk
 windowrule = tile, class:^CiscoCollabHost$
 windowrule = workspace 10, class:^CiscoCollabHost$
-windowrule = float, class:org.gnome.Calculator
+windowrule = float, class:galculator
 windowrule = float, class:steam, title=.*Settings.*
 windowrule = fullscreen, class:steam, title=.*Settings.*
 
