--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -9,9 +9,6 @@ set -g escape-time 10
 set -g focus-events on
 set -g status "on"
 
-# popup border color
-set -g popup-border-style "fg=#7AA2F7"
-
 # default terminal
 set -g default-terminal "xterm-256color"
 
@@ -41,6 +38,7 @@ set -g message-style "fg=${bg},bg=${blue}"
 set -g mode-style "fg=${bg},bg=${blue}"
 set -g pane-border-style "fg=${grey0}"
 set -g pane-active-border-style "fg=${green}"
+set -g popup-border-style "fg=${blue}"
 
 # enable CSI u
 set -g extended-keys off
@@ -73,10 +71,10 @@ bind-key j run-shell "~/.local/bin/popup_tmux.sh"
 bind-key k run-shell "~/.local/bin/popup_tmux_common.sh"
 
 # resize pane
-bind -n M-h resize-pane -L 2
-bind -n M-j resize-pane -D 2
-bind -n M-k resize-pane -U 2
-bind -n M-l resize-pane -R 2
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
 
 # tmux sessionizer in popup
 bind C-f run-shell "tmux popup -E -w 80% -h 80% '~/.local/bin/tmux-sessionizer.sh'"
